Improved UI styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
 
         <button type="submit">Predict</button>
     </form>
+     <p>Made by Adarsh </p>
 
     {% if prediction %}
         <h3>Result: {{ prediction }}</h3>
